--- a/src/main/webapp/i18n/de/global.json
+++ b/src/main/webapp/i18n/de/global.json
@@ -10,6 +10,7 @@
                 "main": "Entitäten",
                 "submissions": "Daten hochladen",
                 "admin": "View submitted files",
+                "fdaiNummer": "Fdai Nummer",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
