--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -10,6 +10,7 @@
                 "main": "Add submissions",
                 "submissions": "Upload Files",
                 "admin": "View submitted files",
+                "fdaiNummer": "Fdai Nummer",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
