--- a/src/main/webapp/i18n/de/submissions.json
+++ b/src/main/webapp/i18n/de/submissions.json
@@ -21,6 +21,7 @@
             "subject": "Subject",
             "exercises": "Exercises",
             "files": "Files",
+            "print": "PDF drucken",
             "user": "User",
             "table": {
                 "title": "Submitted files"
