--- a/src/main/webapp/i18n/en/activeUsers.json
+++ b/src/main/webapp/i18n/en/activeUsers.json
@@ -2,7 +2,7 @@
     "gradingApp": {
         "activeUsers": {
             "home": {
-                "title": "Active Users",
+                "title": "Active Students",
                 "createLabel": "Create a new Active Users",
                 "createOrEditLabel": "Create or edit a Active Users"
             },
