--- a/src/main/webapp/i18n/de/global.json
+++ b/src/main/webapp/i18n/de/global.json
@@ -11,9 +11,9 @@
                 "submissions": "Daten hochladen",
                 "ladmin": "Gesendete Dateien anzeigen",
                 "fdaiNummer": "Fdai Nummer",
-                "activeUsers": "Active Students",
+                "activeUsers": "Zugewiesene Studenten",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
-                "fdainummer": "Geben Sie die Fdai Nummer ein"
+                "fdainummer": "Fdai-Nummernliste hochladen"
             },
             "account": {
                 "main": "Zugang",
