Show list of unassigned active users to lab admins

--- a/src/main/webapp/i18n/de/fdaiNummer.json
+++ b/src/main/webapp/i18n/de/fdaiNummer.json
@@ -17,7 +17,7 @@
                 "title": "Fdai Nummer"
             },
             "fdainumber": "Fdainumber",
-            "ip": "Ip",
+            "ip": "Wählen Sie die CSV-Datei",
             "user": "User"
         }
     }
