--- a/src/main/webapp/i18n/en/fdaiNummer.json
+++ b/src/main/webapp/i18n/en/fdaiNummer.json
@@ -17,7 +17,7 @@
                 "title": "Fdai Nummer"
             },
             "fdainumber": "Fdainumber",
-            "ip": "Ip",
+            "ip": "Choose CSV file",
             "user": "User"
         }
     }
