--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -3,7 +3,7 @@
         "title": "Grading Application",
         "subtitle": "This is a Thesis Project",
         "logged": {
-            "message": "This is a thesis project which describes the development of the Automated Grading system. The main objective of this project is to make it possible to grade exams automatically once students have uploaded their files in the system. The project is implemented using spring boot. The frontend of the website is designed in Angular and backend is developed using Java. Frontend makes calls to backend using REST API. For testing purposes, H2 database is used and for development and final implementation, SQL database would be used. "
+            "message": "This is a thesis project which describes the development of the Online exam submissions and management system. This thesis focuses on the idea to keep the examination system paper-based but with a possibility to have some online essentials like management of submitted files, allowing professors to assign systems to students taking exams to prevent confusion of seating during the exams etc. The frontend of the website is designed in Angular and backend is developed using Spring boot. API calls are made through REST API. For testing purposes, H2 database is used and for development and final implementation, SQL database would be used. "
         }
     }
 }
