--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "Grading Application",
+        "title": "Online Exam Submission Application",
         "subtitle": "This is a Thesis Project",
         "logged": {
             "message": "This is a thesis project which describes the development of the Online exam submissions and management system. This thesis focuses on the idea to keep the examination system paper-based but with a possibility to have some online essentials like management of submitted files, allowing professors to assign systems to students taking exams to prevent confusion of seating during the exams etc. The frontend of the website is designed in Angular and backend is developed using Spring boot. REST API is used to make calls to the backend. For testing purposes, H2 database is used and for development and final implementation, SQL database would be used. "
