translation file changes

--- a/src/main/webapp/i18n/de/fdaiNummer.json
+++ b/src/main/webapp/i18n/de/fdaiNummer.json
@@ -17,7 +17,8 @@
                 "title": "Fdai Nummer"
             },
             "fdainumber": "Fdainumber",
-            "ip": "Wählen Sie die CSV-Datei",
+            "importcsv": "Wählen Sie die CSV-Datei",
+            "ip": "IP",
             "user": "User"
         }
     }
