--- a/src/main/webapp/i18n/en/fdaiNummer.json
+++ b/src/main/webapp/i18n/en/fdaiNummer.json
@@ -17,7 +17,8 @@
                 "title": "Fdai Nummer"
             },
             "fdainumber": "Fdainumber",
-            "ip": "Choose CSV file",
+            "importcsv": "Choose CSV file",
+            "ip": "IP",
             "user": "User"
         }
     }
